# ai-installment-houses

./: Cargo.toml  LICENSE  Makefile.toml  README.md  dfx.json
.github/workflows/: build-test.yml
assets/nft/: nfts.csv
assets/wasm/: icrc2-template-canister.wasm
docs/: README.md
docs/canisters/: ledger.md  swap.md
integration-tests/: Cargo.toml
integration-tests/src/: actor.rs  client.rs  helper.rs  lib.rs  wasm.rs
integration-tests/src/client/: icrc.rs  ledger.rs  swap.rs
integration-tests/tests/: integration_tests.rs  lib.rs
integration-tests/tests/inspect/: swap.rs
integration-tests/tests/use_case/: buy_nft.rs  get_listing.rs  list_nft.rs  mod.rs  unlist_nft.rs  withdraw_icp.rs
scripts/: dfx-build.sh  dfx-setup.sh
src/declarations/ledger/: ledger.did.d.ts  ledger.did.js
src/declarations/swap/: index.js  swap.did.d.ts  swap.did.js
src/did/: Cargo.toml
src/did/src/: http.rs  lib.rs  swap.rs
src/frontend/: .env.production  .eslintignore  .gitignore  package.json  sitemap.xml  tailwind.config.ts  tsconfig.json
src/frontend/src/: App.tsx  index.html  index.tsx  styles.css
src/frontend/src/js/: storage.ts  utils.ts
src/frontend/src/js/api/: api.ts  getListing.ts  getListings.ts  icpToUsd.ts  search.ts  tokenMetadata.ts  totalSupply.ts
src/frontend/src/js/components/: AppLayout.tsx  Footer.tsx  Header.tsx  IcConnect.tsx  SeoEngine.tsx
src/frontend/src/js/components/App/: AppContext.tsx  AppError.tsx  AppSuccess.tsx
src/frontend/src/js/components/Header/: Desktop.tsx  Mobile.tsx
src/frontend/src/js/components/IcConnect/: DisconnectPopup.tsx  WalletSelector.tsx
src/frontend/src/js/components/reusable/: Button.tsx  Carousel.tsx  Container.tsx  Link.tsx  Page.tsx  Paragraph.tsx
src/frontend/src/js/components/shared/: TaskList.tsx
src/frontend/src/js/components/svg/: Ekoke.tsx  Ethereum.tsx  EthereumWhite.tsx  InternetComputer.tsx  X.tsx  (+1 more)
src/frontend/src/js/data/: api.ts  real_estate.ts
src/frontend/src/js/ic/: AgentContext.tsx  icp-ledger.did.ts  ledger.did.ts  swap.did.ts
src/frontend/src/js/pages/: Home.tsx  Token.tsx
src/frontend/src/js/tasks/: BuyTokenTask.ts
src/frontend/src/js/utils/: routes.ts  seo.ts
src/ledger/: Cargo.toml  ledger.did
src/ledger/src/: app.rs  http.rs  lib.rs  storable.rs
src/ledger/src/app/: configuration.rs  inspect.rs  storage.rs  test_utils.rs
src/ledger/src/app/storage/: tokens.rs
src/ledger/src/http/: search.rs
src/swap/: Cargo.toml  swap.did
src/swap/src/: app.rs  constants.rs  did.rs  http.rs  inspect.rs  lib.rs  storable.rs  utils.rs
src/swap/src/app/: client.rs  configuration.rs  inspect.rs  memory.rs  storage.rs  test_utils.rs
src/swap/src/app/client/: dip721_client.rs  icrc_ledger_client.rs
utils/minter/: Cargo.toml
utils/minter/src/: main.rs  metadata.rs  nft.rs
(+7 files in other folders)
