[package]
name = "integration-tests"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
candid = { workspace = true }
pocket-ic = "2"
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
pretty_assertions = "1"
serial_test = "3"
tokio = { version = "1", features = ["full"] }
